[tool.poetry]
name = "imgur-to-minio"
version = "0.1.0"
description = ""
authors = ["jasonxie <x5758x@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
httpx = "^0.24.0"
minio = "^7.1.14"
environs = "^9.5.0"
uvicorn = "^0.22.0"
aiofile = "^3.8.5"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
ipython = "^8.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
